--- a/bibliography.bib
+++ b/bibliography.bib
@@ -79,3 +79,11 @@ title = {Case Study: Use of AWS Lambda for Building a Serverless Chat Applicatio
 isbn = {978-981-15-0789-2},
 doi = {10.1007/978-981-15-0790-8_24}
 }
+
+@online{Amazon,
+  author = {Amazon Web Services, Inc. (n.d.)},
+  title = {AWS Step Functions Pricing | Serverless Microservice Orchestration | Amazon Web Services},
+  year = {2023},
+  available = {https://aws.amazon.com/step-functions/pricing/},
+  accessed = {2023-02-01}
+}
