--- a/Bosco.sty
+++ b/Bosco.sty
@@ -72,6 +72,7 @@
 \usepackage{float}
 \floatstyle{plaintop}
 \restylefloat{table}
+\usepackage{tabularx}
 \usepackage{array}
 \setlength\extrarowheight{2pt}
 
