--- a/Bosco.tex
+++ b/Bosco.tex
@@ -443,7 +443,7 @@ The analysis is based on the current number of tests and the frequency they are 
 
 \begin{figure}[H]
  \centering
- \includegraphics[width=15cm]{./diagrams/sf_cost_analysis}
+ \includegraphics[width=15cm]{./diagrams/sfcost}
  \caption{Bosco Step Function Cost Analysis}
 \end{figure}
 
